# hft-engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_order_book.cpp
engine/: matching_engine.cpp  matching_engine.hpp  object_pool.hpp  order.cpp  order.hpp  order_book.cpp  order_book.hpp  order_id_generator.hpp  price_level.cpp  price_level.hpp  trade.hpp  types.hpp
frontend/: index.html  package-lock.json  package.json  server.js  vite.config.js
frontend/src/: App.jsx
network/: fix_parser.cpp  fix_parser.hpp  tcp_server.cpp  tcp_server.hpp
scripts/: build.sh  stress_test.sh
tests/: CMakeLists.txt  test_fix_parser.cpp  test_matching_engine.cpp  test_object_pool.cpp  test_order.cpp  test_order_book.cpp  test_price_level.cpp  test_types.cpp
